--- a/styles/header.css
+++ b/styles/header.css
@@ -4,7 +4,7 @@ header {
 
 nav{
     background-color: var(--cor1);
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.466);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     display: flex;
     justify-content: space-around;
     align-items: center;
