--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,13 @@
+@import url(reset.css);
 @import url(header.css);
+@import url(conteudo.css);
 
-*{
-    margin: 0;
-    padding: 0;
-}
+
 
 :root{
     --fundo: linear-gradient(235.59deg, #F8E6C6 -14.47%, rgba(248, 230, 198, 0) 81.52%); 
     --cor1: white;
+    --cor2: #FFD791;
 
     --fonte-principal: 'Quicksand', sans-serif;
 }
@@ -18,6 +18,8 @@ body{
     height: 100vh;
     font-family: var(--fonte-principal);
     font-weight: 400;
-    font-size: 1rem;
+    font-size: 16px; 
 }
+
+
 
