--- a/styles/conteudo.css
+++ b/styles/conteudo.css
@@ -13,3 +13,33 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
+.conteudo__card{
+    background-color: var(--cor1);
+    display: flex;
+    margin: 5%;   
+    width: 90%;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.conteudo__card__lado-esquerdo{
+    display: flex;
+    flex-direction: column;
+    justify-content: ;
+    margin: 5%;
+
+    
+}
+
+.conteudo__card__lado-esquerdo__titulo{
+    font-weight: 700;
+    font-size: 1.12rem;
+}
+
+.conteudo__card__texto{
+    margin: 8px 0;
+}
+.conteudo__card__imagens{
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+}
