--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,8 @@
     --fundo: linear-gradient(235.59deg, #F8E6C6 -14.47%, rgba(248, 230, 198, 0) 81.52%); 
     --cor1: white;
     --cor2: #FFD791;
+    --cor3: #7BD651;
+    --cor4: #5C8449;
 
     --fonte-principal: 'Quicksand', sans-serif;
 }
