--- a/styles/conteudo.css
+++ b/styles/conteudo.css
@@ -73,6 +73,7 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 2.18rem;
+    gap: 0.6rem;
 }
 
 .conteudo__carrosel__imagem{
