--- a/styles/conteudo.css
+++ b/styles/conteudo.css
@@ -71,10 +71,11 @@
 
 .conteudo__carrosel{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     margin-bottom: 2.18rem;
     gap: 0.6rem;
-    width: 95%;
+   
+    
 }
 
 .conteudo__carrosel__imagem{
