--- a/styles/conteudo.css
+++ b/styles/conteudo.css
@@ -16,10 +16,10 @@
 .conteudo__card{
     background-color: var(--cor1);
     display: flex;
-    margin: 5%; 
+    justify-content: center;
+    margin: 7%; 
     padding: 0.5rem 0;  
     width: 90%;
-    
     align-items: center;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
@@ -28,7 +28,7 @@
     display: flex;
     flex-direction: column;
     margin: 5%;
-
+    width: 50%;
     
 }
 
@@ -47,7 +47,14 @@
 }
 
 .conteudo__card__lado-direito{
+    display: flex;
+    flex-direction: column;
     margin-right: 1.12rem;
+    
+}
+
+.conteudo__card__lado-direito__imagem{
+    width: 100%;
 }
 
 .conteudo__card__lado-direito__botao{
@@ -70,14 +77,17 @@
 }
 
 .conteudo__carrosel{
-    display: flex;
+    display: flex ;
     justify-content: center;
     margin-bottom: 2.18rem;
-    gap: 0.6rem;
-   
+    gap: 0.6rem; 
     
 }
 
 .conteudo__carrosel__imagem{
-   
+    width: 90%;
 }
+
+
+
+
