--- a/styles/conteudo.css
+++ b/styles/conteudo.css
@@ -17,7 +17,7 @@
     background-color: var(--cor1);
     display: flex;
     justify-content: center;
-    margin: 7%; 
+    margin: 5%; 
     padding: 0.5rem 0;  
     width: 90%;
     align-items: center;
@@ -78,14 +78,14 @@
 
 .conteudo__carrosel{
     display: flex ;
-    justify-content: center;
+    justify-content: space-around;
     margin-bottom: 2.18rem;
-    gap: 0.6rem; 
+   
     
 }
 
 .conteudo__carrosel__imagem{
-    width: 90%;
+    width: 100%;
 }
 
 
