--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -1,4 +1,3 @@
-
 .rodape{ 
     display: flex;
     flex-direction: column;
@@ -7,7 +6,16 @@
     background-color: var(--cor1);
     height: 6.9rem;
     gap: 14px;
-   
+    position: relative;
+    width: 100%;
+    
+}
+
+.rodape__imagem{
+    position: absolute;
+    bottom: 100%;
+    width: 100%;
+  
 }
 
 .rodape__texto{
